[gd_scene load_steps=12 format=3 uid="uid://dqsbyo63vfcyx"]

[ext_resource type="Texture2D" uid="uid://r7pnsoxd8d0w" path="res://Graphics/Ui/PNG/grey_panel.png" id="1_3rfd2"]
[ext_resource type="Script" path="res://Scene/MainScene/LoginScene.gd" id="2_b1aad"]
[ext_resource type="Theme" uid="uid://c2iwmviw26odh" path="res://Gui/Cancel.tres" id="2_ck75v"]
[ext_resource type="Texture2D" uid="uid://byks4ltbcpt3d" path="res://Graphics/Ui/PNG/grey_button01.png" id="3_cebxs"]
[ext_resource type="Texture2D" uid="uid://66klc6e88cg8" path="res://Graphics/Ui/PNG/44da78b4a24e3278998a9f8c810600d4.jpg" id="3_xl6u6"]
[ext_resource type="Texture2D" uid="uid://c2kqk6pkkvanf" path="res://Graphics/Ui/PNG/green_button01.png" id="4_1qw82"]
[ext_resource type="Texture2D" uid="uid://bthfdjwo0wu5y" path="res://Graphics/Ui/PNG/green_button06.png" id="5_x66km"]
[ext_resource type="Texture2D" uid="uid://q5nw3u248tyl" path="res://Graphics/Ui/PNG/blue_button01.png" id="6_ektxo"]
[ext_resource type="Texture2D" uid="uid://ds25ckj776gkw" path="res://Graphics/Ui/PNG/green_button13.png" id="6_uw1y2"]
[ext_resource type="Texture2D" uid="uid://dnfyeqm6nk804" path="res://Graphics/Ui/PNG/blue_button13.png" id="9_ljwbn"]

[sub_resource type="GDScript" id="GDScript_ursk5"]
script/source = "extends TextureButton


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="LoginScene" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -89.0
offset_right = 679.0
offset_bottom = 549.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.381772, 0.280258)
size_flags_horizontal = 0
theme = ExtResource("2_ck75v")
script = ExtResource("2_b1aad")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(50, 20)
layout_mode = 0
offset_top = -4.0
offset_right = 834.0
offset_bottom = 639.0
scale = Vector2(1.00528, 1)
theme = ExtResource("2_ck75v")
texture = ExtResource("3_xl6u6")

[node name="NinePatchRect" type="NinePatchRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -190.0
offset_right = 155.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ck75v")
texture = ExtResource("1_3rfd2")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -146.0
offset_right = 114.0
offset_bottom = 146.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ck75v")

[node name="Tiitle" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ck75v")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Bibliomania

"

[node name="UsernameTitle" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = ExtResource("2_ck75v")
text = "Username
"

[node name="LineEdit" type="LineEdit" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 0.392157)
layout_mode = 2
theme = ExtResource("2_ck75v")

[node name="PasswordTitle" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "Password
"

[node name="LineEdit2" type="LineEdit" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0, 0, 0, 0.392157)
layout_mode = 2
theme = ExtResource("2_ck75v")

[node name="Message" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer"]
modulate = Color(0.929412, 0, 0, 1)
layout_mode = 2
theme = ExtResource("2_ck75v")
text = "Password
"

[node name="LoginButton" type="TextureButton" parent="TextureRect/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ck75v")
texture_normal = ExtResource("6_uw1y2")
texture_pressed = ExtResource("4_1qw82")
texture_hover = ExtResource("5_x66km")
texture_disabled = ExtResource("4_1qw82")
ignore_texture_size = true
stretch_mode = 0
script = SubResource("GDScript_ursk5")

[node name="Label" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer/LoginButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Log in"

[node name="SingupButton" type="TextureButton" parent="TextureRect/NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ck75v")
texture_normal = ExtResource("3_cebxs")
texture_pressed = ExtResource("6_ektxo")
texture_hover = ExtResource("9_ljwbn")
texture_disabled = ExtResource("6_ektxo")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="TextureRect/NinePatchRect/VBoxContainer/SingupButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -11.5
offset_right = 30.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sing up
"

[connection signal="button_down" from="TextureRect/NinePatchRect/VBoxContainer/LoginButton" to="." method="_on_login_button_button_down"]
[connection signal="button_down" from="TextureRect/NinePatchRect/VBoxContainer/SingupButton" to="." method="_on_singup_button_button_down"]
